[tool.poetry]
name = "pyTMBot"
version = "0.3.0-dev"
description = "Versatile Telegram bot designed for managing Docker containers, monitoring server status, and extending its functionality through a modular plugin system. The bot operates synchronously, simplifying deployment by eliminating the need for webhooks"
authors = ["Denis Rozhnovskiy <pytelemonbot@mail.ru>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/orenlab/pytmbot"
homepage = "https://github.com/orenlab/pytmbot"
keywords = ["telegram", "bot", "docker", "monitoring", "server"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: Communications :: Chat",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "pytmbot" }]

[tool.poetry.dependencies]
python = "^3.12"
emoji = "2.15.0"
jinja2 = "==3.1.6"
pydantic = "==2.12.5"
pydantic-settings = "==2.13.0"
docker = "==7.1.0"
humanize = "==4.15.0"
psutil = "==7.2.2"
pyotp = "==2.9.0"
loguru = "==0.7.3"
pyyaml = "==6.0.3"
pygal = "==3.1.0"
pytelegrambotapi = "==4.31.0"
fastapi = "==0.129.0"
uvicorn = "==0.40.0"
influxdb-client = "==1.50.0"
pypng = "^0.20220715.0"
qrcode = { extras = ["pil"], version = "^8.2" }
aiohttp = "==3.13.3"
packaging = "==26.0"
pyoutlineapi = "==0.4.0"
click = { version = "==8.3.1", optional = true }
python-dateutil = ">=2.9.0.post0"
cachetools = "^7.0.1"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
mypy = "^1.0.0"
codeclone = "^1.4.1"

[tool.poetry.extras]
pyoutlineapi = ["pyoutlineapi"]
click = ["click"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N", # pep8-naming
]
lint.ignore = [
    "E501", # line too long (если используете formatter)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "dist",
    "build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pytmbot"
testpaths = [
    "tests",
]