[project]
name = "pyTMBot"
version = "0.3.1"
description = "Versatile Telegram bot designed for managing Docker containers, monitoring server status, and extending its functionality through a modular plugin system. The bot operates synchronously, simplifying deployment by eliminating the need for webhooks"
authors = [{ name = "Denis Rozhnovskiy", email = "pytelemonbot@mail.ru" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "telegram",
    "bot",
    "docker",
    "monitoring",
    "server",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "emoji>=2.15.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "docker>=7.1.0",
    "humanize>=4.15.0",
    "psutil>=7.2.2",
    "pyotp>=2.9.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "pygal>=3.1.0",
    "pytelegrambotapi>=4.31.0",
    "fastapi>=0.135.0",
    "uvicorn>=0.41.0",
    "influxdb-client>=1.50.0",
    "pypng>=0.20220715.0",
    "qrcode>=8.2,<9",
    "aiohttp>=3.13.3",
    "packaging>=26.0",
    "python-dateutil>=2.9.0.post0",
    "cachetools>=7.0.1,<8",
]

[project.optional-dependencies]
pyoutlineapi = ["pyoutlineapi>=0.4.0"]
click = ["click>=8.3.1"]

[project.urls]
Homepage = "https://github.com/orenlab/pytmbot"
Repository = "https://github.com/orenlab/pytmbot"

[dependency-groups]
dev = [
    "ruff>=0.15.1,<0.16",
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "mypy>=1.0.0,<2",
    "codeclone>=1.4.2,<2",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.5,<10",
    "types-cachetools>=6.2.0.20251022,<7",
    "types-PyYAML>=6.0.12,<7",
    "types-python-dateutil>=2.9.0.20260302,<3",
    "types-requests>=2.32.4.20250913,<3",
    "pre-commit>=4.5.1",
]

[project.scripts]
pytmbot = "pytmbot.main:main"

[tool.uv]

[tool.uv.build-backend]
module-name = ["pytmbot"]
module-root = ""

[tool.uv.sources]
codeclone = { git = "https://github.com/orenlab/codeclone.git", rev = "feat/2.0.0b5" }

[build-system]
requires = ["uv_build>=0.9.18,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N", # pep8-naming
]
lint.ignore = [
    "E501", # line too long (если используете formatter)
    "B019", # lru_cache on instance methods (existing intentional caches)
    "N815", # allow external camelCase field names for API models
    "N818", # keep existing BaseBotException naming
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "dist",
    "build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
files = ["pytmbot", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pytmbot"
testpaths = [
    "tests",
]
