[project]
name = "pyTMBot"
version = "0.3.3"
description = "Versatile Telegram bot designed for managing Docker containers, monitoring server status, and extending its functionality through a modular plugin system. The bot operates synchronously, simplifying deployment by eliminating the need for webhooks"
authors = [{ name = "Denis Rozhnovskiy", email = "pytelemonbot@mail.ru" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "telegram",
    "bot",
    "docker",
    "monitoring",
    "server",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "emoji>=2.15.0",
    "jinja2>=3.1.6",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "docker>=7.1.0",
    "humanize>=4.15.0",
    "psutil>=7.2.2",
    "pyotp>=2.9.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "pygal>=3.1.0",
    "pytelegrambotapi>=4.34.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "influxdb-client>=1.50.0",
    "pypng>=0.20220715.0",
    "qrcode>=8.2,<9",
    "aiohttp>=3.14.1",
    "packaging>=26.2",
    "python-dateutil>=2.9.0.post0",
    "cachetools>=7.0.6,<8",
]

[project.optional-dependencies]
pyoutlineapi = ["pyoutlineapi>=0.4.0"]
click = ["click>=8.4.1"]

[project.urls]
Homepage = "https://github.com/orenlab/pytmbot"
Repository = "https://github.com/orenlab/pytmbot"

[dependency-groups]
dev = [
    "ruff>=0.15.17,<0.16",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "mypy>=2.1.0,<3",
    "codeclone[mcp]>=2.0.2",
    "types-cachetools>=7.0.0.20260503,<8",
    "types-PyYAML>=6.0.12.20260510,<7",
    "types-python-dateutil>=2.9.0.20260508,<3",
    "types-requests>=2.33.0.20260513,<3",
    "pre-commit>=4.6.0",
    "zensical>=0.0.45",
]

[project.scripts]
pytmbot = "pytmbot.main:main"

[tool.uv]

[tool.uv.build-backend]
module-name = ["pytmbot"]
module-root = ""


[build-system]
requires = ["uv_build>=0.9.18,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N", # pep8-naming
]
lint.ignore = [
    "E501", # line too long (если используете formatter)
    "B019", # lru_cache on instance methods (existing intentional caches)
    "N815", # allow external camelCase field names for API models
    "N818", # keep existing BaseBotException naming
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "dist",
    "build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
files = ["pytmbot", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pytmbot"
testpaths = [
    "tests",
]
